[tool.poetry]
name = "openwrt-composer"
version = "0.1.0"
description = "An OpenWRT firmware builder which takes input from a YAML manifest"
authors = ["Jonathan G. Underwood <jonathan.underwood@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.11"
"ruamel.yaml" = "^0.17.32"
requests = "^2.31.0"
netjsonconfig = "^1.0.2"
podman = "^4.6.0"
typer = {extras = ["all"], version = "^0.9.0"}
pydantic = "^2.3.0"
pydantic-settings = "^2.0.3"

[tool.poetry.dev-dependencies]
pytest = "^7.3.1"
black = "^23.1a1"
tox = "^4.2.6"
flake8 = "^6.0.0"
isort = "^5.10.1"

[tool.poetry.scripts]
owc = 'openwrt_composer.main:build'
owc2 = 'openwrt_composer.cli:app'

[tool.poetry.group.dev.dependencies]
black = "^23.9.1"
tox = "^4.11.3"
flake8 = "^6.1.0"
isort = "^5.12.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

[tool.isort]
profile = "black"