[tool.poetry]
name = "openwrt-composer"
version = "0.1.0"
description = "An OpenWRT firmware builder which takes input from a YAML manifest"
authors = ["Jonathan G. Underwood <jonathan.underwood@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.11"
requests = "^2.31.0"
podman = "^4.6.0"
typer = {extras = ["all"], version = "^0.9.0"}
pydantic = "^2.3.0"
pydantic-settings = "^2.0.3"
jinja2 = "^3.1"

[tool.poetry.scripts]
owc = 'openwrt_composer.cli:app'

[tool.poetry.group.dev.dependencies]
pytest = "^7.3.1"
black = "^25.1.0"
tox = "^4.24.1"
flake8 = "^7.1.1"
isort = "^5.10.1"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

[tool.isort]
profile = "black"